docs/v3.5.3/_sources/gallery/experiment/sphere/sphere_Qsca_vs_diameter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/sphere_Qsca_vs_diameter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_sphere_Qsca_vs_diameter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_sphere_Qsca_vs_diameter.py:


Sphere: Qsca vs diameter
========================

.. GENERATED FROM PYTHON SOURCE LINES 8-9

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 9-25

.. code-block:: Python

    import numpy as np

    from PyMieSim.experiment.scatterer import Sphere
    from PyMieSim.experiment.source import Gaussian
    from PyMieSim.experiment.detector import Photodiode

    from PyMieSim.experiment import Setup
    from PyMieSim import units
    from PyMieSim.units import nanometer, degree, watt, AU, RIU
    from PyOptik import Material
    Material.print_available()
    import PyMieSim
    PyMieSim.debug_mode = True







.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    +-----------------------+-----------------------+
    | Sellmeier Materials   | Tabulated Materials   |
    +=======================+=======================+
    | argon                 | silicon               |
    +-----------------------+-----------------------+
    | lithium_niobate       | chromium              |
    +-----------------------+-----------------------+
    | acetone               | lead                  |
    +-----------------------+-----------------------+
    | polystyrene           | gold                  |
    +-----------------------+-----------------------+
    | crown                 | tungsten              |
    +-----------------------+-----------------------+
    | fused_silica          | magnesium             |
    +-----------------------+-----------------------+
    | flint                 | calcium               |
    +-----------------------+-----------------------+
    | ethylene              | pva                   |
    +-----------------------+-----------------------+
    | germanium             | nickel                |
    +-----------------------+-----------------------+
    | FK51A                 | zinc                  |
    +-----------------------+-----------------------+
    | ethanol               | titanium              |
    +-----------------------+-----------------------+
    | LASF9                 | paladium              |
    +-----------------------+-----------------------+
    | methanol              | copper                |
    +-----------------------+-----------------------+
    | pvc                   | sodium                |
    +-----------------------+-----------------------+
    | cellulose             | bismuth               |
    +-----------------------+-----------------------+
    | acetylene             | tantalum              |
    +-----------------------+-----------------------+
    | BAK1                  | polyetylene           |
    +-----------------------+-----------------------+
    | BAF10                 | aluminium             |
    +-----------------------+-----------------------+
    | SF5                   | iron                  |
    +-----------------------+-----------------------+
    | ZBLAN                 | rhodium               |
    +-----------------------+-----------------------+
    | methane               | vanadium              |
    +-----------------------+-----------------------+
    | water                 | BK7                   |
    +-----------------------+-----------------------+
    | propanol              | silver                |
    +-----------------------+-----------------------+
    | SF11                  |                       |
    +-----------------------+-----------------------+
    | air                   |                       |
    +-----------------------+-----------------------+
    | soda_lime_glass       |                       |
    +-----------------------+-----------------------+
    | glycerol              |                       |
    +-----------------------+-----------------------+
    | SF10                  |                       |
    +-----------------------+-----------------------+
    | polystyren            |                       |
    +-----------------------+-----------------------+
    | polycarbonate         |                       |
    +-----------------------+-----------------------+
    | ethane                |                       |
    +-----------------------+-----------------------+




.. GENERATED FROM PYTHON SOURCE LINES 26-27

Defining the source to be employed.

.. GENERATED FROM PYTHON SOURCE LINES 27-48

.. code-block:: Python

    source_1 = Gaussian(
        wavelength=[405, 810] * nanometer,
        polarization=0 * degree,
        optical_power=1e-3 * watt,
        NA=0.2 * AU
    )

    scatterer_1 = Sphere(
        diameter=np.linspace(10, 1000, 150) * nanometer,
        medium_property=[1.33] * RIU,
        property=Material.polystyren,
        source=source_1
    )

    detector_1 = Photodiode(
        NA=[0.9 / 1.33, 1.3 / 1.33, 0.2, 0.1] * units.AU,
        gamma_offset=[0] * units.degree,
        phi_offset=90 * units.degree,

    )








.. GENERATED FROM PYTHON SOURCE LINES 49-50

Defining the experiment setup

.. GENERATED FROM PYTHON SOURCE LINES 50-65

.. code-block:: Python

    experiment_1 = Setup(scatterer=scatterer_1, source=source_1, detector=detector_1)

    dataframe_1 = experiment_1.get('b1', scale_unit=True, drop_unique_level=True)

    # dataframe_1._plot(x='scatterer:diameter', std='detector:NA', show=True)
    dataframe_1.plot(x='scatterer:diameter', show=True)









    # plt.show()


.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_sphere_Qsca_vs_diameter_001.png
   :alt: sphere Qsca vs diameter
   :srcset: /gallery/experiment/sphere/images/sphx_glr_sphere_Qsca_vs_diameter_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.11.13/x64/lib/python3.11/site-packages/PyOptik/material/base_class.py:60: UserWarning: Wavelength range goes from 405.0 nm to 810.0 nm which is outside the allowable range of 436.79999999999995 nm to 1.052 µm µm. [Material: polystyren]
      warnings.warn(

    <Axes: xlabel='scatterer:diameter', ylabel='dimensionless'>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.317 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_sphere_Qsca_vs_diameter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: sphere_Qsca_vs_diameter.ipynb <sphere_Qsca_vs_diameter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: sphere_Qsca_vs_diameter.py <sphere_Qsca_vs_diameter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: sphere_Qsca_vs_diameter.zip <sphere_Qsca_vs_diameter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
